# AudioLogger

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: MANUAL_TEST_PLAN.md
docs/superpowers/plans/: 2026-05-18-audiologger.md
docs/superpowers/specs/: 2026-05-18-audiologger-design.md
scripts/: start-audiologger.bat  start-audiologger.vbs  stop-audiologger.bat
src/audiologger/: __init__.py  __main__.py  audio_capture.py  audio_mix.py  config.py  controller.py  hotkey.py  icons.py  job_queue.py  notifications.py  paths.py  process_loopback.py  recovery.py  segment.py  transcribe_worker.py  transcript_merger.py  tray_app.py
tests/: test_audio_mix.py  test_config.py  test_controller.py  test_job_queue.py  test_paths.py  test_recovery.py  test_transcript_merger.py
